<resources>
    <string name="app_name">Pokédex</string>

    <string name="retry">Retry</string>

    <string name="pokemonTypes">Types</string>
    <string name="pokemonProfile">Profile</string>
    <string name="pokemonWeight">Weight</string>
    <string name="pokemonHeight">Height</string>
    <string name="pokemonBaseExperience">Base experience</string>
    <string name="pokemonAbilities">Abilities</string>
    <string name="pokemonStats">Stats</string>
    <string name="slide_to_fav">Slide to Fav</string>
</resources>
